force-app/main/default/objects/X7S_Adventure_Module__c/X7S_Adventure_Module__c.object-meta.xml
<CustomObject>
    <description>Object to support Learning Adventure Module records as part of the Learning Adventure accelerator from 7Summits.</description>
    <label>7S Adventure Module</label>
    <nameField>
        <label>7S Adventure Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Adventure Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>