force-app/main/default/objects/X7S_Adventure_Module__c/fields/Adventure__c.field-meta.xml
<CustomField>
    <fullName>Adventure__c</fullName>
    <formula>Adventure_Step__r.Adventure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adventure</label>
    <type>Text</type>
</CustomField>