force-app/main/default/objects/X7S_Adventure_Module__c/fields/Adventure_Step__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Step__c</fullName>
    <description>The Adventure Step that contains this Step Module</description>
    <inlineHelpText>The Adventure Step that contains this Step Module</inlineHelpText>
    <label>Adventure Step</label>
    <referenceTo>X7S_Adventure_Step__c</referenceTo>
    <relationshipName>X7S_Step_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>