force-app/main/default/objects/X7S_Adventure_Module__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF(Number_of_Tasks__c &gt; 0, Number_of_Tasks__c = Number_of_Completed_Tasks__c,  Completed_Manual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed (Formula)</label>
    <type>Checkbox</type>
</CustomField>