force-app/main/default/objects/X7S_Adventure_Module__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which to display the Step Module</description>
    <inlineHelpText>The order in which to display the Step Module</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>