force-app/main/default/objects/X7S_Adventure_Module__c/fields/Source_Module_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Module_ID__c</fullName>
    <description>Record ID of the module from which this module was originally cloned</description>
    <label>Source Module ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>