force-app/main/default/objects/X7S_Adventure_Module__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the Step Module that will be displayed above the card</description>
    <inlineHelpText>The title of the Step Module that will be displayed above the card</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>