force-app/main/default/objects/X7S_Adventure_Module__c/fields/Tooltip_Description__c.field-meta.xml
<CustomField>
    <fullName>Tooltip_Description__c</fullName>
    <description>Text to be displayed in the tooltip for this Step Module</description>
    <inlineHelpText>Text to be displayed in the tooltip for this Step Module</inlineHelpText>
    <label>Tooltip Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>