force-app/main/default/objects/X7S_Adventure_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adventure__c</columns>
    <columns>Adventure_Step__c</columns>
    <columns>Source_Module_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>