force-app/main/default/objects/X7S_Adventure_Module__c/listViews/September_Musher_To_Do_Module_Comparison.listView-meta.xml
<ListView>
    <fullName>September_Musher_To_Do_Module_Comparison</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Tasks__c</columns>
    <columns>Task_Progress__c</columns>
    <columns>Adventure__c</columns>
    <columns>Adventure_Step__c</columns>
    <columns>Source_Module_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Module_ID__c</field>
        <operation>equals</operation>
        <value>aCe1E0000008OtaSAE</value>
    </filters>
    <label>September Musher To Do Module Comparison</label>
    <sharedTo>
        <group>X7S_Adventure_Admins</group>
    </sharedTo>
</ListView>